force-app/main/default/objects/driverstanding__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>