force-app/main/default/objects/driverstanding__c/fields/dateOfBirth__c.field-meta.xml
<CustomField>
    <fullName>dateOfBirth__c</fullName>
    <label>dateOfBirth</label>
    <type>Date</type>
</CustomField>