force-app/main/default/objects/driverstanding__c/fields/familyName__c.field-meta.xml
<CustomField>
    <fullName>familyName__c</fullName>
    <label>familyName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>