force-app/main/default/objects/driverstanding__c/fields/givenName__c.field-meta.xml
<CustomField>
    <fullName>givenName__c</fullName>
    <label>givenName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>