force-app/main/default/objects/driverstanding__c/fields/permanentNumber__c.field-meta.xml
<CustomField>
    <fullName>permanentNumber__c</fullName>
    <label>permanentNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>