force-app/main/default/objects/driverstanding__c/fields/points__c.field-meta.xml
<CustomField>
    <fullName>points__c</fullName>
    <label>points</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>