force-app/main/default/objects/driverstanding__c/fields/wins__c.field-meta.xml
<CustomField>
    <fullName>wins__c</fullName>
    <label>wins</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>